aws/gateway-patch.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy-ssl
spec:
  bindPort: 8443
