aws/vs-tls-petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: tls-petstore
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: server-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'example.com'
    - 'example.com:8443'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
